--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,6 +226,10 @@ p {
   text-align: center;
 }
 
+.text-center > * {
+  text-align: center;
+}
+
 .text-uppercase {
   text-transform: uppercase;
   letter-spacing: 0.12em;
